--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
     <div>
 	
-        <h1>サーモンビンゴ作成機NW【3.0.0】</h1>
+        <h1>サーモンビンゴ作成機NW【3.0.1】</h1>
 
 	<table>
             <tr>
@@ -79,7 +79,7 @@
                 <td><button type="submit" id="restoration" class="saveareabuttons" onClick="restorationbutton()">復元</button></td>
                 <td><textarea id="save_weapondata" rows="10" cols=60 readonly></textarea></td>
                 <script type="text/javascript">
-                    var local_list=JSON.parse(localStorage.getItem('salmonrandomweapondata_storage'))
+                    var local_list=JSON.parse(localStorage.getItem('salmonrandomweapondataNW_storage'))
 		    
                     list_message = "[保存済みデータ]\n"+local_list[0]+","+local_list[1]+","+local_list[2]+","+local_list[3]
                     +","+local_list[4]+","+local_list[5]+","+local_list[6]+","+local_list[7]+","+local_list[8]+","
@@ -121,6 +121,9 @@
 <更新履歴＆注意書き>
 ※正常に表示されない場合、キャッシュの削除をお試しください
 
+☆3.0.1
+・Splatoon2版とセーブデータが共有になっていた問題を修正。ごめんなさい。
+	
 ☆3.0.0
 ・Splatoon3に合わせるため突然verが3になった
 ・LACT、トライストリンガー、ドライブワイパー、ジムワイパーが増えた
