--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	
 ☆3.0.2
 //・一部環境から見たときにタイトルがケバインクにやられていた問題を修正。
-//・
+//・ページ下部にsskmbkのgithubページへのリンクができた
 	
 ☆3.0.1
 ・Splatoon2版とセーブデータが共有になっていた問題を修正。ごめんなさい。
