--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 ☆3.0.2
 //・一部環境から見たときにタイトルがケバインクにやられていた問題を修正。
 //・ページ下部にsskmbkのgithubページへのリンクができた
+//・更新履歴の見た目調整
 	
 ☆3.0.1
 ・Splatoon2版とセーブデータが共有になっていた問題を修正。ごめんなさい。
@@ -156,36 +157,37 @@
 ・作成ボタンや復元ボタンでそのまま内容を書き換えられるようになったので、リロードボタンはなくなった
 
 ☆Alpha_0.1.4_pre 2020-05-30
-データの保存、復元ができるようになった
-データ削除、書き換え機能などはまだないです
+・データの保存、復元ができるようになった
+・データ削除、書き換え機能などはまだないです
 
 ☆Alpha_0.1.1~3
-軽微なバグ修正
-更新履歴＆注意書き欄に書き加え
+・軽微なバグ修正
+・更新履歴＆注意書き欄に書き加え
                                  
 ☆Alpha_0.1.0
-ボタンを押したら色が変わるようになった
-白→橙→白→橙
+・ボタンを押したら色が変わるようになった(白→橙→白→橙)
 
 ☆Pre-Alpha_0.1.5
-画面に合わせたページサイズで表示されるようになった
-ビンゴ表を成形した
+・画面に合わせたページサイズで表示されるようになった
+。ビンゴ表を成形した
 
 ☆Pre-Alpha_0.1.4
-ビンゴ表の枠が最初から表示されるようになった
-更新報告欄がかっこいい感じになった
+・ビンゴ表の枠が最初から表示されるようになった
+・更新報告欄がかっこいい感じになった
 
 ☆Pre-Alpha_0.1.3
-作成ボタンを押したらリセットボタンに変身するようになった
+・作成ボタンを押したらリセットボタンに変身するようになった
 
 ☆Pre-Alpha_0.1.2
-一度押した作成ボタンを押せないように
-リセットボタンを追加
+・一度押した作成ボタンを押せないように
+・リセットボタンを追加
 
 ☆Pre-Alpha_0.1.1
-武器重複をなくした(はず)
+・武器重複をなくした(はず)
       </textarea>
 </div>
 
+<a href="sskmbk.github.io">作者ページ</a>
+	    
 </body>
 </html>
