--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 	<table>
             <tr>
                 <td colspan="2"><button type="submit" id="create" onClick="randomise()">作成</button></td>
+                <td></td>
+                <td><a href="https://sskmbk.github.io/salmonbingo_public" target="_blank"><button id="link">2版</button></a></td>
+                <td><a href="https://sskmbk.github.io" target="_blank"><button id="link">他リンク</button></a></td>
 	    </tr>
 	    <tr>
                 <td><button type="submit" id="weapon0" class="buttons" onClick="onclick_color(style,'weapon0')"></button></td>
@@ -184,10 +187,9 @@
 
 ☆Pre-Alpha_0.1.1
 ・武器重複をなくした(はず)
-      </textarea>
-</div>
+</textarea>
 
-<a href="sskmbk.github.io">作者ページ</a>
+</div>
 	    
 </body>
 </html>
