linkボタン大きさ調整

--- a/index.html
+++ b/index.html
@@ -126,10 +126,11 @@
 	
 ☆3.0.2
 //・一部環境から見たときにタイトルがケバインクにやられていた問題を修正。
-//・ページ下部にsskmbkのgithubページへのリンクができた
-//・更新履歴の見た目調整
+・2版、その他リンクへの別窓を開くボタンができた
+・CSSの記述を一部調整した(見た目変化なしの予定)
+・更新履歴の調整
 	
-☆3.0.1
+☆3.0.1 2022-9-28
 ・Splatoon2版とセーブデータが共有になっていた問題を修正。ごめんなさい。
 	
 ☆3.0.0
