--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 	
 ☆3.0.2
 //・一部環境から見たときにタイトルがケバインクにやられていた問題を修正。
-・2版、その他リンクへの別窓を開くボタンができた
-・CSSの記述を一部調整した(見た目変化なしの予定)
+・2版、その他リンクボタンができた
+・CSSの記述を一部調整(見た目変化なし予定)
 ・更新履歴の調整
 	
 ☆3.0.1 2022-9-28
