タイトル画像化

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
     <div>
 	
-        <h1>サーモンビンゴ作成機NW【3.0.2】</h1>
+        <h1><img src="title.jpg" alt="サーモンビンゴ作成機NW"></h1>
 
 	<table>
             <tr>
