--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
  
 ②レイアウトが崩れます
  キャッシュの削除をお試しください。
+ Safari(iPhone)ではブラウザデータ削除を行うとビンゴ表保存データも飛んでしまうことを確認しています。お気を付けください。
 
 ③苦情を言いたい
  Twitter:@sskm_amd
@@ -124,8 +125,8 @@
 <更新履歴＆注意書き>
 ※正常に表示されない場合、キャッシュの削除をお試しください
 	
-☆3.0.2
-//・一部環境から見たときにタイトルがケバインクにやられていた問題を修正。
+☆3.0.2 (オールランダム終了後に更新)
+・一部環境から見たときにタイトルがケバインクにやられていた問題を修正。
 ・2版、その他リンクボタンができた
 ・CSSの記述を一部調整(見た目変化なし予定)
 ・更新履歴の調整
