--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
     <div>
 	
-        <h1><img src="title.jpg" alt="サーモンビンゴ作成機NW"></h1>
+        <h1><img src="title.jpg" alt="サーモンビンゴ作成機NW">【3.0.3】</h1>
 
 	<table>
             <tr>
@@ -125,15 +125,18 @@
 <更新履歴＆注意書き>
 ※正常に表示されない場合、キャッシュの削除をお試しください
 	
-☆3.0.2 (オールランダム終了後に更新)
+☆3.0.3 2020-10-04
 ・一部環境から見たときにタイトルがケバインクにやられていた問題を修正。
 ・2版、その他リンクボタンができた
 ・CSSの記述を一部調整(見た目変化なし予定)
 ・更新履歴の調整
+
+☆3.0.2 2022-10-02
+・スコープ付きチャージャーがオールランダムで出現しないらしいので急遽修正。
 	
 ☆3.0.1 2022-9-28
 ・Splatoon2版とセーブデータが共有になっていた問題を修正。ごめんなさい。
-	
+
 ☆3.0.0
 ・Splatoon3に合わせるため突然verが3になった
 ・LACT、トライストリンガー、ドライブワイパー、ジムワイパーが増えた
