--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
     <div>
 	
-        <h1><img src="title.jpg" alt="サーモンビンゴ作成機NW">【3.0.3】</h1>
+        <h1><img src="title.jpg" alt="サーモンビンゴ作成機NW">【3.0.4】</h1>
 
 	<table>
             <tr>
@@ -125,6 +125,10 @@
 <更新履歴＆注意書き>
 ※正常に表示されない場合、キャッシュの削除をお試しください
 	
+☆3.0.4(修正中)
+・OGP対応
+・できればSNS投稿(スクリーンショット)
+
 ☆3.0.3 2020-10-04
 ・一部環境から見たときにタイトルがケバインクにやられていた問題を修正。
 ・2版、その他リンクボタンができた
