--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   minimum-scale=1.0,
   maximum-scale=1.0>
 
-  <title>SBNWtest</title>
+  <title>SaBINGO/NW</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
 </head>
