エンピツとスペシュの追加(3.0.4)

--- a/index.html
+++ b/index.html
@@ -125,9 +125,13 @@
 <更新履歴＆注意書き>
 ※正常に表示されない場合、キャッシュの削除をお試しください
 	
-☆3.0.4(修正中)
-・OGP対応
-・できればSNS投稿(スクリーンショット)
+☆3.0.5(修正中)
+・OGP対応//未実装
+・できればSNS投稿(スクリーンショット)//未実装
+
+☆3.0.4
+・スペースシューターとエンピツを追加
+・ページタイトルが短くなった
 
 ☆3.0.3 2020-10-04
 ・一部環境から見たときにタイトルがケバインクにやられていた問題を修正。
