OGP対応、リンク用アイコン追加
あとimgフォルダの追加

--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+<head prefix="og:https://ogp.me/ns#">
 
-  <meta charset="UTF-8">
-  <meta name="author" content="笹かま">
-  <meta name="description" content="サーモンビンゴ制作が簡単にできるページ ver splatoon3">
-  <meta name="viewport"
-  content="width=device-width",
-  initial-scale=1.0,
-  minimum-scale=1.0,
-  maximum-scale=1.0>
+    <meta property="og:url" content="https://sskmbk.github.io/SBNWtestpage/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="SaBINGO/NW" />
+    <meta property="og:description" content="簡単にサーモンビンゴが作成できるページ" />
+    <meta property="og:site_name" content="サーモンビンゴ作成機NW" />
+    <meta property="og:image" content="img/icon.png" />
 
-  <title>SaBINGO/NW</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="author" content="笹かま">
+    <meta name="description" content="サーモンビンゴ制作が簡単にできるページ ver splatoon3">
+    <meta name="viewport"
+    content="width=device-width",
+    initial-scale=1.0,
+    minimum-scale=1.0,
+    maximum-scale=1.0>
+
+    <title>SaBINGO/NW</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 
 </head>
   
@@ -27,7 +34,7 @@
 	
     <div>
 	
-        <h1><img src="title.jpg" alt="サーモンビンゴ作成機NW">【3.0.4】</h1>
+        <h1><img src="img/title.jpg" alt="サーモンビンゴ作成機NW">【3.0.5】</h1>
 
 	<table>
             <tr>
@@ -129,11 +136,11 @@
 ・OGP対応//未実装
 ・できればSNS投稿(スクリーンショット)//未実装
 
-☆3.0.4
+☆3.0.4 2022-12-09
 ・スペースシューターとエンピツを追加
 ・ページタイトルが短くなった
 
-☆3.0.3 2020-10-04
+☆3.0.3 2022-10-04
 ・一部環境から見たときにタイトルがケバインクにやられていた問題を修正。
 ・2版、その他リンクボタンができた
 ・CSSの記述を一部調整(見た目変化なし予定)
