--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
   
 
-<!--・右上にちょっとした説明・使い方は「作成」を押すだけ！・間違って消しちゃっても復元できるように、ビンゴ表は保存しておくのがオススメ！-->
+<!--・使い方は「作成」を押すだけ！・間違って消しちゃっても復元できるように、ビンゴ表は保存しておくのがオススメ！-->
       
 <body>
       
