--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
 <head prefix="og:https://ogp.me/ns#">
 
-    <meta property="og:url" content="https://sskmbk.github.io/SBNWtestpage/" />
+    <!--<meta property="og:url" content="https://sskmbk.github.io/SBNWtestpage/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="SaBINGO/NW" />
     <meta property="og:description" content="簡単にサーモンビンゴが作成できるページ" />
     <meta property="og:site_name" content="サーモンビンゴ作成機NW" />
-    <meta property="og:image" content="img/icon.png" />
+    <meta property="og:image" content="img/icon.png" />-->
 
     <meta charset="UTF-8">
     <meta name="author" content="笹かま">
