--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="ja">
 <head prefix="og:https://ogp.me/ns#">
 
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@sskm_amd" />
+    <meta name="twitter:title" content="サーモンビンゴ作成機NW" />
+    <meta name="twitter:description" content="簡単にサーモンビンゴが作成できるページ" />
+    <meta name="twitter:image" content="img/icon.png" />
+
     <meta property="og:url" content="https://sskmbk.github.io/SBNWtestpage/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="SaBINGO/NW" />
