--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     maximum-scale=1.0>
 
     <title>SaBINGO/NW</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
 </head>
