--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="SaBINGO/NW" />
     <meta property="og:description" content="簡単にサーモンビンゴが作成できるページ" />
     <meta property="og:site_name" content="サーモンビンゴ作成機NW" />
-    <meta property="og:image" content="img/icon.jpg" />
+    <meta property="og:image" content="https://sskmbk.github.io/SBNWtestpage/img/icon.png" />
 
     <meta charset="UTF-8">
     <meta name="author" content="笹かま">
