--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 
     <meta property="og:url" content="https://sskmbk.github.io/SBNWtestpage/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="SaBINGO/NW" />
+    <meta property="og:title" content="サーモンビンゴ作成機NW"" />
     <meta property="og:description" content="簡単にサーモンビンゴが作成できるページ" />
-    <meta property="og:site_name" content="サーモンビンゴ作成機NW" />
+    <meta property="og:site_name" content="SaBINGO/NW"/>
     <meta property="og:image" content="https://sskmbk.github.io/SBNWtestpage/img/icon.png" />
+    <meta name="twitter:title" content="サーモンビンゴ作成機NW - 簡単にサーモンビンゴが作成できるページ">
 
     <meta charset="UTF-8">
     <meta name="author" content="笹かま">
