--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta property="og:url" content="https://sskmbk.github.io/SBNWtestpage/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="サーモンビンゴ作成機NW"" />
-    <meta property="og:description" content="簡単にサーモンビンゴが作成できるページ" />
+    <meta property="og:description" content="サーモンビンゴ作成が簡単にできるページ" />
     <meta property="og:site_name" content="SaBINGO/NW"/>
     <meta property="og:image" content="https://sskmbk.github.io/SBNWtestpage/img/icon.png" />
-    <meta name="twitter:title" content="サーモンビンゴ作成機NW - 簡単にサーモンビンゴが作成できるページ">
+    <meta name="twitter:title" content="サーモンビンゴ作成機NW - 簡単にサーモンビンゴ作成が簡単にできるページ">
 
     <meta charset="UTF-8">
     <meta name="author" content="笹かま">
-    <meta name="description" content="サーモンビンゴ制作が簡単にできるページ ver splatoon3">
+    <meta name="description" content="サーモンビンゴ作成が簡単にできるページ ver splatoon3">
     <meta name="viewport"
     content="width=device-width",
     initial-scale=1.0,
