--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
   
 
-<!--・使い方は「作成」を押すだけ！・間違って消しちゃっても復元できるように、ビンゴ表は保存しておくのがオススメ！-->
+<!--・使い方は「作成」を押すだけ！-->
       
 <body>
       
@@ -36,7 +36,7 @@
 	
     <div>
 	
-        <h1><img src="img/title.jpg" alt="サーモンビンゴ作成機NW">【3.0.5-1】</h1>
+        <h1><img src="img/title.jpg" alt="サーモンビンゴ作成機NW">【3.0.5-2】</h1>
 
 	<table>
             <tr>
