--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
     <meta property="og:url" content="https://sskmbk.github.io/SBNWtestpage/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="サーモンビンゴ作成機NW"" />
+    <meta property="og:title" content="サーモンビンゴ作成機NW" />
     <meta property="og:description" content="サーモンビンゴ作成が簡単にできるページ" />
     <meta property="og:site_name" content="SaBINGO/NW"/>
     <meta property="og:image" content="https://sskmbk.github.io/SBNWtestpage/img/icon.png" />
-    <meta name="twitter:title" content="サーモンビンゴ作成機NW - 簡単にサーモンビンゴ作成が簡単にできるページ">
+    <meta name="twitter:title" content="サーモンビンゴ作成機NW">
 
     <meta charset="UTF-8">
     <meta name="author" content="笹かま">
@@ -36,7 +36,7 @@
 	
     <div>
 	
-        <h1><img src="img/title.jpg" alt="サーモンビンゴ作成機NW">【3.0.5-2】</h1>
+        <h1><img src="img/title.jpg" alt="サーモンビンゴ作成機NW">【3.0.5-3】</h1>
 
 	<table>
             <tr>
