--- a/index.html
+++ b/index.html
@@ -132,10 +132,12 @@
 <textarea id="update" readonly>
 <更新履歴＆注意書き>
 ※正常に表示されない場合、キャッシュの削除をお試しください
-	
-☆3.0.5(修正中)
-・OGP対応//未実装
-・できればSNS投稿(スクリーンショット)//未実装
+☆3.0.6(対応予定)
+・できればSNS投稿(スクリーンショット)//未実装	
+
+☆3.0.5
+・OGP対応
+・ファビコンの設定
 
 ☆3.0.4 2022-12-09
 ・スペースシューターとエンピツを追加
